# pycoulomb

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
examples/: example.ipynb
src/pycoulomb/: __init__.py  direct.py  ewald.py
tests/: test_direct.py  test_ewald.py
