[metadata]
name = pycoulomb
version = attr:pycoulomb.__version__
description = Python Implementation for Coulomb interactions
long_description = file: README.md
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
url = https://github.com/picocentauri/pycoulomb
author = attr:pycoulomb.__author__
author_email = philip.loche@epfl.ch

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

keywords =
    Ewald
    Coulomb

python_requires = >=3.6

project_urls =
    Bug Reports = https://github.com/picocentauri/pycoulomb/issues
    Source = https://github.com/pypa/picocentauri/pycoulomb/

[options]
package_dir=
    =src
packages = find:

install_requires =
    MDAnalysis
    numpy
    scipy

[options.packages.find]
where=src

[options.extras_require]
dev =
    check-manifest
test =
    pytest

[bdist_wheel]
universal=1
